--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "daisyui": "^4.10.1",
     "tailwindcss": "^3.4.1"
   }
